pushing server updates

--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "note-taker",
+  "name": "homework_11",
   "version": "1.0.0",
   "description": "## Description",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7"
-  },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jessicamenius/11Homework.git"
   },
   "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/jessicamenius/11Homework/issues"
   },
-  "homepage": "https://github.com/jessicamenius/11Homework#readme"
+  "homepage": "https://github.com/jessicamenius/11Homework#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
